syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service CompanyDescription{
	rpc GetCompanyDescription(IdCompDescription) returns (CompanyDescriptionReply);
	rpc GetCompanyDescriptions(google.protobuf.Empty) returns (CompanyDescriptions);
	rpc AddCompanyDescription(CompanyDescriptions) returns (google.protobuf.Empty);
	rpc UpdateCompanyDescription(CompanyDescriptions) returns (google.protobuf.Empty);
	rpc DeleteCompanyDescription(CompanyDescriptions) returns (google.protobuf.Empty);
}

message IdCompDescription{
	string Id =1;
}

message CompanyDescriptions{
	repeated CompanyDescriptionReply CompDescs =1;
}

message CompanyDescriptionReply{
	string Id = 1;
	string Company = 2;
	string LanguageId =3;
	string CompanyName =4;
	string CompanyDescription =5;	
	bytes TimeStamp= 6;
}